# recruitment

./: .gitignore
artificial-intelligence/: ANSWERS_HuanKang.md
artificial-intelligence/ai_intern/: README.md  ocr_analysis.md
artificial-intelligence/ai_intern/Q_1/: ANSWERS.md  ANSWERS_HuanKang.md  README.md  ZhihaoChen_ANSWER.md  answers  answers.md  answers.txt  answers_Q1.md  respuestas_Q1.md
artificial-intelligence/ai_intern/Script/: README.md  test.py  train.py  util.py
engineering/multimedia/: README.md
engineering/multimedia/snapshot/: CMakeLists.txt
engineering/multimedia/videoplayer-gtk3/: CMakeLists.txt  cmake_install.cmake  videoplayer  videoplayer.c
engineering/multimedia/videoplayer-qt/: CMakeLists.txt
rdi/business_developer/: README.md
rdi/computer_vision/: README.md
rdi/computer_vision_jr/: FluendoTestQ1.ipynb  README.md
rdi/computer_vision_jr /Q_2/: Code.ipynb
rdi/computer_vision_jr/Q_1/: Q1_solution.md  Q_1_answers.md  README.md  SOLUCIÓN_Q1.md  answers
rdi/computer_vision_jr/Q_2/: Q2_4_Julia_alberic.py  Q2_solution.md  Q_2.solution.md  Q_2_answers.md  README.md  SOLUCIÓN_Q2.md  VGGExample.py  answers  auto_labeler.py  classifier.py  code.ipynb  opticalFlow.py  propuesta_tradicional.py  tensorflow_example_code.ipynb  video_parse.py  yolov4_code_example.ipynb
rdi/computer_vision_jr/Q_2/ultralytics/: .gitignore  requirements.txt
rdi/computer_vision_jr/Q_2/ultralytics/datasets/football/: README.dataset.txt  README.roboflow.txt  data.yaml
rdi/computer_vision_jr/Q_2/ultralytics/datasets/football/test/labels/: im111_jpg.rf.7b8756a3f1d5f4343d1e1dbac3939849.txt  im121_jpg.rf.18016857695bed9fa4d3cf9a57c51cb5.txt  im14_jpg.rf.e015de0ecb6d00eead1da19310cadc7e.txt  im1_jpg.rf.888cfc5f2842275209ed33735e7ef27b.txt  im51_jpg.rf.7615e5121b0e86c5efe9a56a736994ae.txt  im54_jpg.rf.f1c04bc1f649fdca3b032325bdc32006.txt  im62_jpg.rf.8b0c2cf887f7d5b52cd86c948fd98203.txt  im66_jpg.rf.9421346384b20260c96ec1a9e2d1387f.txt  im69_jpg.rf.7e6dbc1f534f618808bb9b06aa5ec5fa.txt  im75_jpg.rf.a04e21d07d72df5dbe85674122166669.txt  im80_jpg.rf.0187e04c31ee16e693d53170884c1015.txt  im89_jpg.rf.895877580f40d675f83b8aa268021af7.txt  im92_jpg.rf.b1cc32f7bef7c3801fb60e769626c752.txt
rdi/computer_vision_jr/Q_2/ultralytics/datasets/football/train/: labels.cache
rdi/computer_vision_jr/Q_2/ultralytics/datasets/football/train/labels/: im0_jpg.rf.47efcf7cc5a530296269169ac1c24ace.txt  im100_jpg.rf.9b024735aa8ae22d8135b5e44451a834.txt  im101_jpg.rf.d36111870087035e695f4411086f4e10.txt  im102_jpg.rf.93e95c4c03a0551d86d9ed873da95e3b.txt  im103_jpg.rf.a55eab31fb3af7235aa1fd40860eba9d.txt  im104_jpg.rf.bcdc80435694fa0b57b926816bf1ed6e.txt  im106_jpg.rf.53dcb5e5cd12a349d0b91787bf50ee84.txt  im109_jpg.rf.882e927d285be6365d073eef2f6b5fe9.txt  im113_jpg.rf.a7e4125c19928d366877d137eb33e859.txt  im114_jpg.rf.d995e7fc6bedaf3d4866c668471e0e09.txt  im115_jpg.rf.9f34387596b56099578d0ea473ff048e.txt  im119_jpg.rf.b0b9f50ceabe3c974ea7b67e2ccd9f33.txt  im11_jpg.rf.1c79396db96bd11ab9a8831115fdac26.txt  im120_jpg.rf.cb664d249c3c94ef3b38d6750d1152d5.txt  im122_jpg.rf.0c0e2e15acd8afcdb1268203a2174ac2.txt  im124_jpg.rf.e7bba43510e6c5966321eab889c7b522.txt  im125_jpg.rf.50b92aadc85103cc4f0b38883e915c58.txt  (+74 more)
rdi/computer_vision_jr/Q_2/ultralytics/datasets/football/valid/: labels.cache
rdi/computer_vision_jr/Q_2/ultralytics/datasets/football_pre/labels/: im0.txt  im1.txt  im10.txt  im100.txt  im101.txt  im102.txt  im103.txt  im104.txt  im105.txt  im106.txt  im107.txt  im108.txt  im109.txt  im11.txt  im110.txt  im111.txt  im112.txt  im113.txt  im114.txt  im115.txt  im116.txt  im117.txt  im118.txt  im119.txt  im12.txt  im120.txt  im121.txt  im122.txt  im123.txt  im124.txt  im125.txt  im126.txt  im127.txt  im128.txt  im129.txt  im13.txt  im14.txt  im15.txt  im16.txt  im17.txt  (+90 more)
rdi/research_engineer/: README.md
(+26 files in other folders)
